Add stop button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     Let's make some noise
     <button id="sound-btn">Give me some noise</button>
+    <button id="stop-btn">Stop it!</button>
     <script src="./script.js"></script>
   </body>
 </html>
