--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Let's make some noise
     <button id="sound-btn">Give me some noise</button>
     <button id="stop-btn">Stop it!</button>
+    <input id="hertz" type="number" min="360" max="560" value="440" />
     <script src="./script.js"></script>
   </body>
 </html>
