Add slider to control frequency

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     Let's make some noise
-    <button id="sound-btn">Give me some noise</button>
+    <button id="start-btn">Give me some noise</button>
     <button id="stop-btn">Stop it!</button>
-    <input id="hertz" type="number" min="360" max="560" value="440" />
+    <input id="hertz" type="range" min="360" max="560" value="440" step="10" />
     <script src="./script.js"></script>
   </body>
 </html>
