Add selector for type of wave

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <button id="start-btn">Give me some noise</button>
     <button id="stop-btn">Stop it!</button>
     <input id="hertz" type="range" min="360" max="560" value="440" step="10" />
+    <select id="oscillation-type">
+      <option value="custom">Custom</option>
+      <option value="sine">Sine</option>
+      <option value="square">Square</option>
+      <option value="sawtooth">Sawtooth</option>
+      <option value="triangle">Triangle</option>
+    </select>
     <script src="./script.js"></script>
   </body>
 </html>
