--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sound JS</title>
+    <title>Noise JS</title>
   </head>
   <body>
-    Let's make some noise
-    <button id="start-btn">Give me some noise</button>
+    <button id="start-btn">Make some noise</button>
     <button id="stop-btn">Stop it!</button>
     <input id="hertz" type="range" min="360" max="560" value="440" step="10" />
     <select id="oscillation-type">
